# kimi-mneme

./: .gitignore  .kimiignore  LICENSE  README.md  add_test_data.py  check_db.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_context.py  test_db.py  test_mneme.py  test_path.py
.github/workflows/: ci.yml  pages.yml  release.yml
.kimi/: AGENTS.md  PROJECT.md
docs/: ARCHITECTURE.md  CONFIG.md  DEVELOPMENT.md  HOOKS.md  INSTALL.md  PRIVACY.md  TOOLS.md  WEB_UI.md  index.html  sitemap.xml
hooks/: __init__.py  post_compact.py  post_tool_use.py  post_tool_use_failure.py  pre_compact.py  session_end.py  session_start.py  user_prompt_submit.py
mneme/: __init__.py  cli.py  compat.py  config.py  mcp_server.py  updater.py
mneme/core/: __init__.py  ai_provider.py  codebase_analyzer.py  compressor.py  extractor.py  heuristic_structuring.py  injector.py  llm_client.py  project_md.py  sanitize.py  session_summary.py  summarizer.py  worker.py
mneme/core/prompts/: __init__.py  json_parser.py  observation_prompt.py
mneme/db/: __init__.py  collections_store.py  schema.py  store.py  structured_store.py  vector.py  wire_store.py
mneme/server/: __init__.py  __main__.py  app.py  routes.py
mneme/server/static/: app.js  index.html  style.css
mneme/wire/: __init__.py  indexer.py  models.py  parser.py  reader.py  watcher.py
plugin/: __init__.py  config.json  plugin.json
plugin/tools/: __init__.py  get.py  search.py  timeline.py
scripts/: __init__.py  install.py  uninstall.py
server/: app.py  routes.py
server/static/: app.js  index.html  style.css
skills/mem-search/: SKILL.md
tests/: __init__.py  test_ai_provider.py  test_codebase_analyzer.py  test_collections.py  test_json_parser.py  test_sanitize.py  test_sqlite_vec.py  test_store.py  test_structured_store.py  test_updater.py  test_worker.py
